--- a/src/containers/CardHolder/CardHolder.css
+++ b/src/containers/CardHolder/CardHolder.css
@@ -1,7 +1,5 @@
 .holder {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	margin-top: 5px;
-	
+	justify-content: space-around;
 }
