--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,4 +1,13 @@
 .main {
-	background-color: yellow;
+	background-color: #71c9ce;
 	text-align: center;
+}
+
+h1 {
+	margin: 0;
+}
+
+header {
+	border: 2px solid #e3fdfd;
+	padding: 5px;
 }
